Adding some model classes and reformatting the code